124: Fix alignment of containers

--- a/ceres-client/src/components/Statistics/Statistics.css
+++ b/ceres-client/src/components/Statistics/Statistics.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: stretch;
+  align-items:  center;
   height: 60vh;
 }
 
@@ -38,6 +38,10 @@
 
 .right-container {
   width: 80%;
+}
+
+.left-container {
+  background-color: white;
 }
 
 .outer-container {
